syntax = "proto3";

option java_package = "com.prodonik.genprotos";
option java_outer_classname = "IArithmetics";

message ArithmeticsRequest {
    double num1 = 1;
    double num2 = 2;
}

message ArithmeticsResponse {
    double result = 1;
}

service ArithmeticsService {
    rpc Add (ArithmeticsRequest) returns (ArithmeticsResponse);
    rpc Subtract (ArithmeticsRequest) returns (ArithmeticsResponse);
    rpc Multiply (ArithmeticsRequest) returns (ArithmeticsResponse);
    rpc Divide (ArithmeticsRequest) returns (ArithmeticsResponse);
}
